2008-12-03  David Levin  <levin@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Remove uses of document() in XMLHttpRequest where simple.
        https://bugs.webkit.org/show_bug.cgi?id=22619

        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::responseXML):
        Return NULL in the worker case which is according to spec (and avoids using document()).

        (WebCore::XMLHttpRequest::callReadyStateChangeListener):
        (WebCore::XMLHttpRequest::initSend):
        Use scriptExecutionContext() instead of document().

2008-12-03  David Levin  <levin@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Make ScriptExecutionContextTaskWorkerTask::performTask a pure virtual function.
        https://bugs.webkit.org/show_bug.cgi?id=22642

        * dom/Document.cpp:
        (WebCore::ScriptExecutionContextTaskTimer::ScriptExecutionContextTaskTimer):
        (WebCore::ScriptExecutionContextTaskTimer::fired):
        (WebCore::PerformTaskContext::PerformTaskContext):
        (WebCore::performTask):
        (WebCore::Document::postTask):
        * dom/Document.h:
        * dom/ScriptExecutionContext.cpp:
        * dom/ScriptExecutionContext.h:
        * dom/WorkerContext.cpp:
        (WebCore::ScriptExecutionContextTaskWorkerTask::create):
        (WebCore::ScriptExecutionContextTaskWorkerTask::ScriptExecutionContextTaskWorkerTask):
        (WebCore::ScriptExecutionContextTaskWorkerTask::performTask):
        (WebCore::WorkerContext::postTask):
        * dom/WorkerContext.h:

2008-12-03  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Using ActiveDOMObject as base class for DOMTimer.
        https://bugs.webkit.org/show_bug.cgi?id=22620

        Using ActiveDOMObject simplifies the code because ActiveDOMObject
        is wired for stop/pause/resume on loading/unloading/caching the page etc
        so the timer-specific code that does the same can be removed.